fix: eliminate remaining IDE warnings in ISP Common.java and related files
- Common (ISP): convert all 12 remaining raw RowMapper<T> anonymous classes to
  typed lambdas; fix method signature getTransactionRowMapper() return type to
  RowMapper<Transaction>; replace deprecated new URL(String) with
  URI.create().toURL(); parameterize raw ArrayList, List, and Iterator generics
- CpayadminApplication (ISP): add @NonNull to addResourceHandlers registry param
  to satisfy WebMvcConfigurer interface contract
- AudittrailController (ISP): use String.valueOf() in parameters.addValue() to
  give JDT a provably non-null String and resolve null type safety warnings; add
  missing value != null guard in getMerchantAudittrails search path
- AuthoritativeBalanceService (Fresh): remove unused PaymentChannelAdapter import