@@ -16,6 +16,7 @@ import java.math.BigInteger;
 import java.math.RoundingMode;
 import java.net.HttpURLConnection;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
@@ -319,7 +320,7 @@ public class Common {
             r.setRequestData(data);
             r.setRequestHeaders(headers);
         try {
-            URL rquestUrl = new URL(url);
+            URL rquestUrl = URI.create(url).toURL();
             HttpURLConnection con;
 
             if ("https".equalsIgnoreCase(rquestUrl.getProtocol())) {
@@ -349,7 +350,7 @@ public class Common {
             
             
             //methods without the body.
-            List<String> methods = new ArrayList();
+            List<String> methods = new ArrayList<>();
             methods.add("DELETE");
             methods.add("PUT");
             methods.add("POST");
@@ -399,9 +400,9 @@ public class Common {
                 .filter(entry -> entry.getKey() != null)
                 .forEach(entry -> {
                 
-                    List headerValues = entry.getValue();
+                    List<String> headerValues = entry.getValue();
                     String sHeaderValue = "";
-                    Iterator it = headerValues.iterator();
+                    Iterator<String> it = headerValues.iterator();
                     if (it.hasNext()) {
                         sHeaderValue += it.next();
                         while (it.hasNext()) {
@@ -530,8 +531,7 @@ public class Common {
         parameters.addValue("account_id", id);
         String sqlSelect = "SELECT *  FROM "+Common.DB_TABLE_MERCHANTS+" "
                 + " WHERE id=:account_id";
-        RowMapper rm = new RowMapper<Merchant>() {
-        public Merchant mapRow(ResultSet rs, int rowNum) throws SQLException {
+        RowMapper<Merchant> rm = (rs, rowNum) -> {
                 Merchant m = new Merchant();
                 m.setName(rs.getString("name"));
                 m.setShort_name(rs.getString("short_name"));
@@ -557,7 +557,6 @@ public class Common {
 
                 m.setUsers(getMerchantUsers(m, jdbcTemplate));
                 return m;
-            }
         };
         List<Merchant> listUsers = jdbcTemplate.query(sqlSelect, parameters, rm);
         if (listUsers.size() > 0) {
@@ -583,8 +582,7 @@ public class Common {
         parameters.addValue("tx_merchant_ref", reference);
         String sqlSelect = "SELECT *  FROM "+Common.DB_TABLE_MERCHANT_TRANSACTION_LOG+" "
                 + " WHERE merchant_id=:merchant_id AND tx_merchant_ref=:tx_merchant_ref";
-        RowMapper rm = new RowMapper<Transaction>() {
-        public Transaction mapRow(ResultSet rs, int rowNum) throws SQLException {
+        RowMapper<Transaction> rm = (rs, rowNum) -> {
                  Transaction t = new Transaction();
                     t.setId(rs.getLong("id"));
                     t.setCharging_method(rs.getString("charging_method"));
@@ -604,7 +602,6 @@ public class Common {
                     t.setPayer_number(rs.getString("payer_number"));
                     t.setTx_type(rs.getString("tx_type"));
                 return t;
-            }
         };
         List<Transaction> listTxs = jdbcTemplate.query(sqlSelect, parameters, rm);
         if (listTxs.size() > 0) {
@@ -630,8 +627,7 @@ public class Common {
         parameters.addValue("tx_unique_id", reference);
         String sqlSelect = "SELECT *  FROM "+Common.DB_TABLE_MERCHANT_TRANSACTION_LOG+" "
                 + " WHERE tx_unique_id=:tx_unique_id";
-        RowMapper rm = new RowMapper<Transaction>() {
-            public Transaction mapRow(ResultSet rs, int rowNum) throws SQLException {
+        RowMapper<Transaction> rm = (rs, rowNum) -> {
                 Transaction t = new Transaction();
                 t.setId(rs.getLong("id"));
                 t.setCharging_method(rs.getString("charging_method"));
@@ -651,7 +647,6 @@ public class Common {
                 t.setPayer_number(rs.getString("payer_number"));
                 t.setTx_type(rs.getString("tx_type"));
                 return t;
-            }
         };
         List<Transaction> listTxs = jdbcTemplate.query(sqlSelect, parameters, rm);
         if (listTxs.size() > 0) {
@@ -674,8 +669,7 @@ public class Common {
         parameters.addValue("tx_gateway_ref", networkRef);
         String sqlSelect = "SELECT *  FROM "+Common.DB_TABLE_MERCHANT_TRANSACTION_LOG+" "
                 + " WHERE tx_gateway_ref=:tx_gateway_ref FOR UPDATE";
-        RowMapper rm = new RowMapper<Transaction>() {
-            public Transaction mapRow(ResultSet rs, int rowNum) throws SQLException {
+        RowMapper<Transaction> rm = (rs, rowNum) -> {
                 Transaction t = new Transaction();
                 t.setId(rs.getLong("id"));
                 t.setCharging_method(rs.getString("charging_method"));
@@ -695,7 +689,6 @@ public class Common {
                 t.setPayer_number(rs.getString("payer_number"));
                 t.setTx_type(rs.getString("tx_type"));
                 return t;
-            }
         };
         List<Transaction> listTxs = jdbcTemplate.query(sqlSelect, parameters, rm);
         if (listTxs.size() > 0) {
@@ -718,8 +711,7 @@ public class Common {
         parameters.addValue("safaricom_request_reference", networkRef);
         String sqlSelect = "SELECT *  FROM "+Common.DB_TABLE_MERCHANT_TRANSACTION_LOG+" "
                 + " WHERE safaricom_request_reference=:safaricom_request_reference FOR UPDATE";
-        RowMapper rm = new RowMapper<Transaction>() {
-            public Transaction mapRow(ResultSet rs, int rowNum) throws SQLException {
+        RowMapper<Transaction> rm = (rs, rowNum) -> {
                 Transaction t = new Transaction();
                 t.setId(rs.getLong("id"));
                 t.setCharging_method(rs.getString("charging_method"));
@@ -740,7 +732,6 @@ public class Common {
                 t.setTx_type(rs.getString("tx_type"));
                 t.setSafaricomRequestReference(rs.getString("safaricom_request_reference"));
                 return t;
-            }
         };
         List<Transaction> listTxs = jdbcTemplate.query(sqlSelect, parameters, rm);
         if (listTxs.size() > 0) {
@@ -768,8 +759,7 @@ public class Common {
                 + " WHERE beneficiary_id=:beneficiary_id "
                 + " AND merchant_batch_transactions_log_id=:batch_id ";
         
-        RowMapper rm = new RowMapper<Transaction>() {
-        public Transaction mapRow(ResultSet rs, int rowNum) throws SQLException {
+        RowMapper<Transaction> rm = (rs, rowNum) -> {
                  Transaction t = new Transaction();
                     t.setId(rs.getLong("id"));
                     t.setCharging_method(rs.getString("charging_method"));
@@ -789,7 +779,6 @@ public class Common {
                     t.setPayer_number(rs.getString("payer_number"));
                     t.setTx_type(rs.getString("tx_type"));
                 return t;
-            }
         };
         List<Transaction> listTxs = jdbcTemplate.query(sqlSelect, parameters, rm);
         if (listTxs.size() > 0) {
@@ -814,8 +803,7 @@ public class Common {
         String sqlSelect = "SELECT *  FROM "+Common.DB_TABLE_MERCHANTS+" "
                 + " WHERE account_number=:account_number";
         
-        RowMapper rm = new RowMapper<Merchant>() {
-        public Merchant mapRow(ResultSet rs, int rowNum) throws SQLException {
+        RowMapper<Merchant> rm = (rs, rowNum) -> {
                 Merchant m = new Merchant();
                 m.setName(rs.getString("name"));
                 m.setAccount_number(rs.getString("account_number"));
@@ -842,7 +830,6 @@ public class Common {
 
                 m.setUsers(getMerchantUsers(m, jdbcTemplate));
                 return m;
-            }
         };
         List<Merchant> listUsers = jdbcTemplate.query(sqlSelect, parameters, rm);
         if (listUsers.size() > 0) {
@@ -865,8 +852,7 @@ public class Common {
         parameters.addValue("account_number", account);
         String sqlSelect = "SELECT *  FROM "+Common.DB_TABLE_MERCHANTS+" "
                 + " WHERE account_number=:account_number";
-        RowMapper rm = new RowMapper<Merchant>() {
-        public Merchant mapRow(ResultSet rs, int rowNum) throws SQLException {
+        RowMapper<Merchant> rm = (rs, rowNum) -> {
                 Merchant m = new Merchant();
                 m.setName(rs.getString("name"));
                 m.setAccount_number(rs.getString("account_number"));
@@ -877,7 +863,6 @@ public class Common {
                 m.setAccount_type(rs.getString("account_type"));
                 m.setUsers(getMerchantUsers(m, jdbcTemplate));
                 return m;
-            }
         };
         List<Merchant> listUsers = jdbcTemplate.query(sqlSelect, parameters, rm);
         if (listUsers.size() > 0) {
@@ -899,8 +884,7 @@ public class Common {
             MapSqlParameterSource parameters = new MapSqlParameterSource();
             parameters.addValue("merchant_id", merchant.getId());
                 
-            RowMapper rm = new RowMapper<MerchantUser>() {
-                public MerchantUser mapRow(ResultSet rs, int rowNum) throws SQLException {
+            RowMapper<MerchantUser> rm = (rs, rowNum) -> {
                     MerchantUser user = new MerchantUser();
                     user.setName(rs.getString("name"));
                     user.setId(rs.getLong("id"));
@@ -913,7 +897,6 @@ public class Common {
                     
                     user.setPrivileges(getUserPrivileges(user, jdbcTemplate));
                     return user;
-                }
             };
             
             List<MerchantUser> listUsers = jdbcTemplate.query(sqlSelect, parameters, rm);
@@ -929,15 +912,13 @@ public class Common {
             MapSqlParameterSource parameters = new MapSqlParameterSource();
             parameters.addValue("admin_id", user.getId());
                 
-            RowMapper rm = new RowMapper<UserPrivilege>() {
-                public UserPrivilege mapRow(ResultSet rs, int rowNum) throws SQLException {
+            RowMapper<UserPrivilege> rm = (rs, rowNum) -> {
                     UserPrivilege user = new UserPrivilege();
                     user.setPrivilege(rs.getString("privilege"));
                     user.setId(rs.getLong("id"));
                     user.setCreated_on(rs.getString("created_on"));
                     user.setUdpated_on(rs.getString("updated_on"));
                     return user;
-                }
             };
             
             List<UserPrivilege> listUsers = jdbcTemplate.query(sqlSelect, parameters, rm);
@@ -958,8 +939,7 @@ public class Common {
                 + "WHERE merchant_id = :merchant_id"
                 + " ORDER BY id DESC LIMIT 1";
 
-        RowMapper rm = new RowMapper<Statement>() {
-        public Statement mapRow(ResultSet rs, int rowNum) throws SQLException {
+        RowMapper<Statement> rm = (rs, rowNum) -> {
                 Statement t = new Statement();
                 t.setId(rs.getLong("id"));
                 t.setAmount(rs.getDouble("amount"));
@@ -974,7 +954,6 @@ public class Common {
                 t.setSms_balance(rs.getDouble("sms_balance"));
                 t.setSafaricom_balance(rs.getDouble(SafariComPaymentGateway.BALANCE_TYPE));
                 return t;
-            }
         };
 
         //ResultSet rs; 
@@ -1156,7 +1135,6 @@ public class Common {
                             t.setTx_type(rs.getString("tx_type"));
                             t.setSms_balance(rs.getDouble("sms_balance"));
                             return t;
-                        }
                     };
 
                     List<Statement> balanceList = jdbcTemplate.query(balanceSql, parametersBalanceSql, rm_b);
@@ -1398,7 +1376,6 @@ public class Common {
                     //safaricom_balance
 
                     return t;
-                }
             };
 
             List<Statement> balanceList = jdbcTemplate.query(balanceSql, parametersBalanceSql, rm_b);
@@ -2401,9 +2378,8 @@ public class Common {
     }
     
     
-    public static RowMapper getTransactionRowMapper() {
-        RowMapper rm = new RowMapper<Transaction>() {
-            public Transaction mapRow(ResultSet rs, int rowNum) throws SQLException {
+    public static RowMapper<Transaction> getTransactionRowMapper() {
+        RowMapper<Transaction> rm = (rs, rowNum) -> {
                     Transaction t = new Transaction();
                     t.setId(rs.getLong("id"));
                     t.setCharging_method(rs.getString("charging_method"));
@@ -2425,7 +2401,6 @@ public class Common {
                     t.setCallback_trace(rs.getString("callback_trace"));
                     t.setTx_merchant_ref(rs.getString("tx_merchant_ref"));
                     return t;
-                }
             };
         return rm;
     }
